--- a/details.html
+++ b/details.html
@@ -57,7 +57,7 @@
                     <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mes</small></h1>
                     <ul class="list-unstyled mt-3 mb-4">
                       <li>Acceso a la plataforma</li>
-                      <li>2 GB de musica</li>
+                      <li>Ahora serán 7 GB de musica 😎</li>
                       <li>Perfil social</li>
                       <li>Soporte</li>
                     </ul>
@@ -107,9 +107,23 @@
 
     </main>
 
+    <form class="form-signin">
+      <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+      <label for="inputEmail" class="sr-only">Email address</label>
+      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
+    </form>
 
-
-    <div class="b-example-divider"></div>
+ 
     <br>
     <footer class="row row-cols-5 py-5 my-5 border-top mt-5">
         <div class="col">
